# git-reports

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: ci.yml
config/: config.yaml.example
examples/: reporte-ejemplo.md
src/: ai.rs  config.rs  lib.rs  main.rs
src/analysis/: commit.rs  contributor.rs  git.rs  mod.rs  report.rs
src/cli/: main.rs
src/core/: ai.rs  ai_tests.rs  config.rs  config_tests.rs
src/core/analysis/: commit_tests.rs  contributor_tests.rs  git.rs  report.rs
tests/: functional_test.rs
