[package]
name = "git-reports"
version = "0.1.0"
edition = "2021"
authors = ["MadKoding"]
description = "Automated Git analytics engine that generates work summaries from repository activity"
license = "MIT"
repository = "https://github.com/madkoding/git-reports"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs-next = "2.0"
reqwest = { version = "0.13", features = ["json", "blocking"] }
git2 = "0.20"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "git_reports"
path = "src/core/mod.rs"

[[bin]]
name = "git-reports"
path = "src/cli/main.rs"
